@@ -1,4 +1,8 @@
 ===== SVN branch rodneyrehm  =====
+
+17/02/2011
+- changed ./ and ../ behaviour
+
 14/02/2011
 - added {block ... hide} option to supress block if no child is defined
 
